completed middle section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leo</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="shortcut icon" href="res/img/harry.png" type="image/x-icon">
 </head>
 
@@ -27,6 +28,28 @@
             <div id="smallheading">
                 <h5>Available For Joining</h5>
                 <h5>Work From Nov 23'</h5>
+            </div>
+            <div id="homefooter">
+                <a href="#">previously worked at TS <i class="ri-arrow-right-up-line"></i></a>
+                <a href="#">internship at OI <i class="ri-arrow-right-up-line"></i></a>
+                <div id="iconset">
+                    <div class="circle"><i class="ri-arrow-down-line"></i></div>
+                    <div class="circle"><i class="ri-arrow-down-line"></i></div>
+                </div>
+            </div>
+        </div>
+        <div id="midd">
+            <div id="element">
+                <h1>Landing Page</h1>
+                <h5>2023</h5>
+            </div>
+            <div id="element">
+                <h1>Portfolio</h1>
+                <h5>2023</h5>
+            </div>
+            <div id="element" class="elementlast">
+                <h1>HopShop</h1>
+                <h5>2023</h5>
             </div>
         </div>
     </div>
