static page completed successfully

--- a/index.html
+++ b/index.html
@@ -40,16 +40,54 @@
         </div>
         <div id="midd">
             <div id="element">
+                <img src="res/img/img1.png" alt="">
                 <h1>Landing Page</h1>
                 <h5>2023</h5>
             </div>
             <div id="element">
+                <img src="res/img/img2.png" alt="">
                 <h1>Portfolio</h1>
                 <h5>2023</h5>
             </div>
             <div id="element" class="elementlast">
+                <img src="res/img/img3.png" alt="">
                 <h1>HopShop</h1>
                 <h5>2023</h5>
+            </div>
+        </div>
+        <div id="about">
+            <div id="imgabout">
+                <img src="res/img/catty.jpg" alt="">
+            </div>
+            <div id="txtabout">
+                <h5>(About me)</h5>
+                <p>A result-driven developer with expertise in full-stack and front-end development. In my role as a
+                    Junior Java Full-Stack Developer at TATA STRIVE, mastered Java, MySQL, Bash-scripting, HTML5,
+                    CSS3, JavaScript, Spring-Boot, Bootstrap, React, XML, and JDBC. Key skills include Core Java, MySQL,
+                    Web Development, Java Database Connectivity(JDBC),and JavaScript. During the Front-End
+                    Developer internship at OASIS INFOBYTES, valuable hands-on experience was gained in responsive
+                    web development and Git. Prepared for real-world challenges, there is eagerness to excel in a
+                    front-end
+                    developer career.</p>
+                <button>Download CV</button>
+            </div>
+        </div>
+        <div id="follow">
+            <h5>(forgot to mention)</h5>
+            <a href="#">Tour to my github <i class="ri-arrow-right-up-line"></i></a>
+        </div>
+        <div id="footer">
+            <div id="lfooter">
+                <h5>2023 &copy;</h5>
+                <h5>0:05 am est</h5>
+            </div>
+            <div id="rfooter">
+                <ul>
+                    <li><a href="#" class="td">Linkedin</a></li>
+                    <li><a href="#" class="td">Github</a></li>
+                    <li><a href="#" class="td">Instagram</a></li>
+                    <li><a href="#" class="td">Twitter</a></li>
+                </ul>
             </div>
         </div>
     </div>
