smooth scrolling and cursor follower added

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="loco.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
+        integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="shortcut icon" href="res/img/harry.png" type="image/x-icon">
 </head>
 
 <body>
+    <div id="cursorpoint"></div>
     <div id="main">
         <div id="home">
             <div id="nav">
@@ -91,7 +96,8 @@
             </div>
         </div>
     </div>
-    <script src="zz.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
