added gsap IN OUT effect on home page

--- a/index.html
+++ b/index.html
@@ -24,15 +24,27 @@
                 <h4>MENU +</h4>
             </div>
             <div id="heading">
-                <h1>FrontEnd</h1>
+                <div id="bounding">
+                    <h1 class="boundingElement">FrontEnd</h1>
+                </div>
                 <div class="blocktext">
-                    <h1 id="secondh2">Developer</h1>
-                    <h5>Based in Mumbai</h5>
+                    <div id="bounding">
+                        <h1 class="boundingElement" id="secondh2">Developer</h1>
+                    </div>
+                    <div id="bounding">
+                        <h5 class="boundingElement">Based in Mumbai</h5>
+                    </div>
                 </div>
             </div>
             <div id="smallheading">
-                <h5>Available For Joining</h5>
-                <h5>Work From Nov 23'</h5>
+                <div id="bounding">
+                    <h5 class="boundingElement">Available For Joining</h5>
+                </div>
+
+                <div id="bounding">
+                    <h5 class="boundingElement">Work From Nov 23'</h5>
+                </div>
+
             </div>
             <div id="homefooter">
                 <a href="#">previously worked at TS <i class="ri-arrow-right-up-line"></i></a>
