added img animation & timmer

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div id="footer">
             <div id="lfooter">
                 <h5>2023 &copy;</h5>
-                <h5>0:05 am est</h5>
+                <h5 id="time">0:05 am est</h5>
             </div>
             <div id="rfooter">
                 <ul>
