fixed hover animation and resume button

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div id="main">
         <div id="home">
             <div id="nav">
+                <h4></h4>
                 <a href="#">i - hitesh</a>
-                <h4>MENU +</h4>
             </div>
             <div id="heading">
                 <div id="bounding">
@@ -47,8 +47,10 @@
 
             </div>
             <div id="homefooter">
-                <a href="#">previously worked at TS <i class="ri-arrow-right-up-line"></i></a>
-                <a href="#">internship at OI <i class="ri-arrow-right-up-line"></i></a>
+                <a href="https://tatastrive.com/" target="_blank" class="underline">previously worked at TS <i
+                        class="ri-arrow-right-up-line"></i></a>
+                <a href="https://oasisinfobyte.com/#home" target="_blank" class="underline">internship at OI <i
+                        class="ri-arrow-right-up-line"></i></a>
                 <div id="iconset">
                     <div class="circle"><i class="ri-arrow-down-line"></i></div>
                     <div class="circle"><i class="ri-arrow-down-line"></i></div>
@@ -57,17 +59,17 @@
         </div>
         <div id="midd">
             <div id="element">
-                <img src="res/img/img1.png" alt="">
+                <img src="res/img/landing.JPG" alt="">
                 <h1>Landing Page</h1>
                 <h5>2023</h5>
             </div>
             <div id="element">
-                <img src="res/img/img2.png" alt="">
-                <h1>Portfolio</h1>
+                <img src="res/img/News.JPG" alt="">
+                <h1>News Page</h1>
                 <h5>2023</h5>
             </div>
             <div id="element" class="elementlast">
-                <img src="res/img/img3.png" alt="">
+                <img src="res/img/hopshop.JPG" alt="">
                 <h1>HopShop</h1>
                 <h5>2023</h5>
             </div>
@@ -86,12 +88,17 @@
                     web development and Git. Prepared for real-world challenges, there is eagerness to excel in a
                     front-end
                     developer career.</p>
-                <button>Download CV</button>
+                <div class="down_cv">
+                    <a href="res/Hitesh Pandey.pdf" download target="_blank">
+                        <button type="button">Download CV</button>
+                    </a>
+                </div>
             </div>
         </div>
         <div id="follow">
             <h5>(forgot to mention)</h5>
-            <a href="#">Tour to my github <i class="ri-arrow-right-up-line"></i></a>
+            <a href="https://github.com/i-hitesh" target="_blank" class="underline">Tour to my github <i
+                    class="ri-arrow-right-up-line"></i></a>
         </div>
         <div id="footer">
             <div id="lfooter">
@@ -100,10 +107,11 @@
             </div>
             <div id="rfooter">
                 <ul>
-                    <li><a href="#" class="td">Linkedin</a></li>
-                    <li><a href="#" class="td">Github</a></li>
-                    <li><a href="#" class="td">Instagram</a></li>
-                    <li><a href="#" class="td">Twitter</a></li>
+                    <li><a href="https://www.linkedin.com/in/hitesh-pandey-190b3b281/" target="_blank"
+                            class="td underline">Linkedin</a></li>
+                    <li><a href="https://github.com/i-hitesh" target="_blank" class="td underline">Github</a></li>
+                    <li><a href="#" class="td underline">Instagram</a></li>
+                    <li><a href="#" class="td underline">Twitter</a></li>
                 </ul>
             </div>
         </div>
