--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hitesh Pandey • Web Developer</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="loco.css">
+    <link rel="stylesheet" href="res/utils/loco.css">
+    <link rel="stylesheet" href="res/utils/responsive.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
         integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -76,18 +77,17 @@
         </div>
         <div id="about">
             <div id="imgabout">
-                <img src="res/img/catty.jpg" alt="">
+                <img src="res/img/IMG_20231127_005306.jpg" alt="">
             </div>
             <div id="txtabout">
                 <h5>(About me)</h5>
                 <p>A result-driven developer with expertise in full-stack and front-end development. In my role as a
                     Junior Java Full-Stack Developer at TATA STRIVE, mastered Java, MySQL, Bash-scripting, HTML5,
                     CSS3, JavaScript, Spring-Boot, Bootstrap, React, XML, and JDBC. Key skills include Core Java, MySQL,
-                    Web Development, Java Database Connectivity(JDBC),and JavaScript. During the Front-End
-                    Developer internship at OASIS INFOBYTES, valuable hands-on experience was gained in responsive
-                    web development and Git. Prepared for real-world challenges, there is eagerness to excel in a
-                    front-end
-                    developer career.</p>
+                    Web Development, Java Database Connectivity(JDBC),and JavaScript.</p>
+                <p> During the Front-End Developer internship at OASIS INFOBYTES, valuable hands-on experience was gained
+                    in responsive web development and Git. Prepared for real-world challenges, there is eagerness to
+                    excel in a front-end developer career.</p>
                 <div class="down_cv">
                     <a href="res/Hitesh Pandey.pdf" download target="_blank">
                         <button type="button">Download CV</button>
@@ -109,9 +109,10 @@
                 <ul>
                     <li><a href="https://www.linkedin.com/in/hitesh-pandey-190b3b281/" target="_blank"
                             class="td underline">Linkedin</a></li>
-                    <li><a href="https://github.com/i-hitesh" target="_blank" class="td underline">Github</a></li>
-                    <li><a href="#" class="td underline">Instagram</a></li>
-                    <li><a href="#" class="td underline">Twitter</a></li>
+                    <li class="github"><a href="https://github.com/i-hitesh" target="_blank"
+                            class="td underline">Github</a></li>
+                    <li><a href="https://www.instagram.com/harryyyyy_30/" class="td underline">Instagram</a></li>
+                    <li><a href="https://twitter.com/Harryyy_30" class="td underline">Twitter</a></li>
                 </ul>
             </div>
         </div>
