--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
                     Junior Java Full-Stack Developer at TATA STRIVE, mastered Java, MySQL, Bash-scripting, HTML5,
                     CSS3, JavaScript, Spring-Boot, Bootstrap, React, XML, and JDBC. Key skills include Core Java, MySQL,
                     Web Development, Java Database Connectivity(JDBC),and JavaScript.</p>
-                <p> During the Front-End Developer internship at OASIS INFOBYTES, valuable hands-on experience was gained
+                <p> During the Front-End Developer internship at OASIS INFOBYTES, valuable hands-on experience was
+                    gained
                     in responsive web development and Git. Prepared for real-world challenges, there is eagerness to
                     excel in a front-end developer career.</p>
                 <div class="down_cv">
-                    <a href="res/Hitesh Pandey.pdf" download target="_blank">
+                    <a href="res/HITESH PANDEY..pdf" download target="_blank">
                         <button type="button">Download CV</button>
                     </a>
                 </div>
