--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         <div id="about">
             <div id="imgabout">
-                <img src="res/img/IMG_20231127_005306.jpg" alt="">
+                <img src="res/img/HITESH.jpeg" alt="">
             </div>
             <div id="txtabout">
                 <h5>(About me)</h5>
@@ -103,7 +103,7 @@
         </div>
         <div id="footer">
             <div id="lfooter">
-                <h5>2023 &copy;</h5>
+                <h5>2024 &copy;</h5>
                 <h5 id="time">0:05 am est</h5>
             </div>
             <div id="rfooter">
